--- a/bib.bib
+++ b/bib.bib
@@ -23,6 +23,7 @@ Encoding: Cp1252
 @STRING{ieeecommsmag = {IEEE Comms. Mag.}}
 @STRING{ieeejsac = {IEEE J. Sel. Areas Commun.}}
 @STRING{ieeespl = {IEEE Signal Process. Letters}}
+@STRING{ieeecommsl = {IEEE Commun. Letters}}
 @STRING{ieeespmag = {IEEE Signal Processing Mag.}}
 @STRING{ieeetaes = {IEEE Trans. Aerospace Elec. Systems}}
 @STRING{ieeetassp = {IEEE Trans. Acoust. Speech Signal Process.}}
@@ -122,6 +123,33 @@ abstract={We present a maximum-likelihood decoding algorithm for an arbitrary la
 keywords={combined source-channel coding, fading channels, lattice theory, maximum likelihood decoding, search problemsarbitrary lattice code, bounded distance search, channel state information, decoding radius, fading channels, lattice points, maximum-likelihood decoding algorithm, received point, receiver, universal lattice code decoder},
 doi={10.1109/18.771234},
 ISSN={0018-9448}
+}
+
+@ARTICLE{Viterbo_SLB_fadinglattice_const_2008,
+title={Sphere Lower Bound for Rotated Lattice Constellations in Fading Channels},
+author={A. Guill\'{e}n i F\`{a}bregas and E. Viterbo},
+journal=ieeetwc,
+year=2008,
+month={Mar.},
+volume=7,
+number=3,
+pages={825-830}
+}
+
+@book{Viterbo_book_rot_lat_2004,
+author={F. Oggier and E. Viterbo}, 
+title={Algebraic Number Theory and Code Design For Rayleigh Fading Channels}, 
+series={Foundations and Trends in Communications and Information Theory}, 
+publisher={Now Publishers Inc}, 
+year={2004}
+}
+
+@book{Rogers_packing_and_covering_1964,
+author={C. A. Rogers}, 
+title={Packing and Covering}, 
+series={Cambridge Tracts in Mathematics and Mathematical Physics}, 
+publisher=cup, 
+year=1964
 }
 
 @ARTICLE{Alekhnovich_divide_conque_RS_poly_interp_2005, 
@@ -300,12 +328,54 @@ month={Aug.},
   author = {H. An and Z. Chen and E. J. Hannan},
   title = {The maximum of the periodogram},
   journal = {Journal of Multivariate Analysis},
-  year = {1986},
-  volume = {13},
+  year = 1986,
+  volume = 13,
   pages = {383-400},
   owner = {Robby},
   timestamp = {2007.06.14}
 }
+
+@ARTICLE{Hannan_non_lin_regression_1971,
+  author = {E. J. Hannan},
+  title = {Non-linear time series regression},
+  journal = {Journal of Applied Probability},
+  year = 1971,
+  volume = 8,
+  pages = {767-780},
+}
+
+@ARTICLE{Hannan_martingale_1971,
+  author = {E. J. Hannan and C. C. Heyde},
+  title = {On Limit Theorems for Quadratic Functions of Discrete Time Series},
+  journal = {Ann. Math. Statist.},
+  year = 1972,
+  volume = 43,
+number=6,
+  pages = {2058-2066},
+}
+
+
+@ARTICLE{McMullen_space_tiling_zonotopes_1975,
+  author = {P. McMullen},
+  title = {Space tiling zonotopes},
+  journal = {Mathematika},
+  year = 1975,
+  volume = 22,
+number=2,
+  pages = {202-211},
+}
+
+@ARTICLE{Wu_asymp_nonlin_ls_1981,
+title={Asymptotic Theory of Nonlinear Least Squares Estimation},
+author={C. F. Wu},
+journal={The Annals of Statistics},
+volume=9, 
+number=3,
+month={May}, 
+year={1981}, 
+pages={501-513}
+} 
+
 
 @ARTICLE{Angeby_PPS_aliasing_2000,
 title={Aliasing of polynomial-phase signal parameters},
@@ -354,6 +424,19 @@ year=2006,
 pages={721–725}
 }
 
+@ARTICLE{Farquharson_CPF_2007, 
+author={M. Farquharson and P. O'Shea}, 
+journal=ieeetsp, 
+title={Extending the Performance of the Cubic Phase Function Algorithm}, 
+year=2007, 
+month={Oct.}, 
+volume=55, 
+number=10, 
+pages={4767-4774}, 
+keywords={SNR performance;additive white Gaussian noise;cubic phase function algorithm;cubic phase signal;parameter estimation;signal-to-noise ratio;threshold analysis;AWGN;parameter estimation;signal processing;}, 
+doi={10.1109/TSP.2007.896085}, 
+ISSN={1053-587X},}
+
 @article{BambahSloane_covering_with_leech_1982,
 title={On a problem of Ry\v{s}kov concerning lattice covering},
 author={R. P. Bambah and N. J. A. Sloane},
@@ -361,6 +444,22 @@ journal={Acta Arithm.},
 volume=42,
 year=1982, 
 pages={107–109}
+}
+
+@article{Sloane_proj_cubic_lattice_2011,
+   author = {N. J. A. Sloane and V. A. Vaishampayan and S. I. R. Costa},
+   affiliation = {AT&T Shannon Labs, 180 Park Avenue, Florham Park, NJ 07932-0971, USA},
+   title = {A Note on Projecting the Cubic Lattice},
+   journal = {Discrete and Computational Geometry},
+   publisher = {Springer New York},
+   issn = {0179-5376},
+   keyword = {Mathematics and Statistics},
+   pages = {472-478},
+   volume = 46,
+   issue = 3,
+   url = {http://dx.doi.org/10.1007/s00454-010-9280-1},
+   note = {10.1007/s00454-010-9280-1},
+   year = 2011
 }
 
 @ARTICLE{Babai1986,
@@ -428,6 +527,41 @@ pages={1392-1396},
 keywords={AWGN;C/N;additive white Gaussian noise;burst frame;burst mode OFDM signal;carrier frequency offset estimation;carrier frequency synchronization;frequency selective fading environments;multipath fading;orthogonal frequency division multiplexing;symbol frame synchronization;symbol frame timing estimation;training symbols;wireless LAN communications systems;AWGN;OFDM modulation;fading channels;frequency estimation;multipath channels;synchronisation;timing;wireless LAN;}, 
 doi={10.1109/VETECF.2000.886325},}
 
+@ARTICLE{Pritt_least_squares_phase_unwrapping_1994, 
+author={M.D. Pritt and J.S. Shipman}, 
+journal={IEEE Transactions on Geoscience and Remote Sensing}, 
+title={Least-squares two-dimensional phase unwrapping using {FFT's}}, 
+year=1994, 
+month={May}, 
+volume=32, 
+number=3, 
+pages={706-708}, 
+keywords={SAR imaging;fast Fourier transform FFT;geophysical measurement technique;interferometry;land surface terrain mapping;least squares two dimensional phase unwrapping;mirror reflection;periodic function;phase function;radar remote sensing;signal processing;synthetic aperture radar;fast Fourier transforms;geophysical techniques;remote sensing;remote sensing by radar;synthetic aperture radar;}, 
+doi={10.1109/36.297989}, 
+ISSN={0196-2892},}
+
+@ARTICLE{Friedlander_PD_phaseunwrapping_1996, 
+author={B. Friedlander and J.M. Francos }, 
+journal=ieeetsp, 
+title={Model based phase unwrapping of {2-D} signals}, 
+year=1996, 
+month={Dec.}, 
+volume=44, 
+number=12, 
+pages={2999-3007}, 
+keywords={2D phase functions;2D polynomial model;2D signals;global analysis;local errors;low sampling rates;model based phase unwrapping;noise;observed field;observed signal;parameter estimation algorithm;parametric model;parametric model fitting;phase aliasing sensitivity;phase estimation;phase function;phase unwrapping algorithm;reference information;signal analysis;phase estimation;signal sampling;}, 
+doi={10.1109/78.553474}, 
+ISSN={1053-587X}
+}
+
+@book{Brent_opt_no_derivs_1973,
+title={Algorithms for Minimization without Derivatives},
+author={R. P. Brent}, 
+publisher={Prentice-Hall},
+address={Englewood Cliffs, New Jersey}, 
+year=1973
+}
+
 @ARTICLE{Barbarossa_analysis_of_PPS_1997,
   author = {S. Barbarossa and V. Petrone},
   title = {Analysis of polynomial-phase signals by the integrated generalized ambiguity function},
@@ -456,6 +590,36 @@ doi={10.1109/VETECF.2000.886325},}
 	noise,white noise}
 }
 
+@article{Caley_PTE_Gaussian_Ints_2010,
+author={T. Caley},
+title={The {Prouhet-Tarry-Escott problem for Gaussian} integers},
+url={http://arxiv.org/abs/1011.1262v2},
+year={2010},
+month={Nov.}
+}
+
+@article{Vallentin_space_tiling_zonotope_2004,
+author={F. Vallentin},
+title={A Note on Space Tiling Zonotopes},
+journal={arXiv:math/0402053v1},
+url={http://http://arxiv.org/abs/math/0402053},
+year={2004},
+month={Feb.}
+}
+
+@ARTICLE{Shalvi_conv_lattice_codes_2011, 
+author={O. Shalvi and N. Sommer and M. Feder}, 
+journal=ieeetit, 
+title={Signal Codes: Convolutional Lattice Codes}, 
+year=2011, 
+month={Aug.}, 
+volume=57, 
+number=8, 
+pages={5203 -5226}, 
+keywords={Tomlinson-Harashima filter;additive white Gaussian noise channel;bidirectional sequential decoding;channel capacity;code construction;coded modulation scheme;codeword;continuous-valued filter;convolutional lattice codes;error analysis;finite impulse response filter;information representation;integer sequence;precoding technique;shaping mechanism;signal codes;signal processing interpretation;FIR filters;channel capacity;convolutional codes;precoding;sequential decoding;signal processing;}, 
+doi={10.1109/TIT.2011.2158876}, 
+ISSN={0018-9448},}
+
 @INCOLLECTION{Micciancio_lattice_based_post_quantum_crypto,
   author = {D. Micciancio and O. Regev},
   title = {Lattice based cryptography},
@@ -474,7 +638,7 @@ journal={42nd {ACM} Symposium on Theory of Computing},
 
 @ARTICLE{Ballal_phase_difference_ambiguity_doa_2008,
 title={Phase-Difference Ambiguity Resolution for a Single-Frequency Signal},
-author={Ballal, T. and Bleakley, C.J.},
+author={T. Ballal and C. J. Bleakley},
 journal= ieeespl,
 year={2008},
 month={ },
@@ -488,7 +652,7 @@ ISSN={1070-9908}, }
 @ARTICLE{Barbero2008_fixed_sphere_decoder,
 author={L. G. Barbero and J. S. Thompson},
 journal=ieeetwc, 
-title={Fixing the Complexity of the Sphere Decoder for MIMO Detection},
+title={Fixing the Complexity of the Sphere Decoder for {MIMO} Detection},
 year={2008},
 month={june},
 volume={7},
@@ -564,6 +728,16 @@ journal={Annals of Statistics},
 vol=33,
 number=3, 
 pages={1225-1259}
+}
+
+@article{Hoeffding_inequality_1963,
+author={W. Hoeffding},
+year=1963, 
+title={Probability inequalities for sums of bounded random variables},
+journal={J. Amer. Statist. Assoc.},
+vol=58,
+number=301, 
+pages={13-30}
 }
 
 @INPROCEEDINGS{bwhk07a,
@@ -841,6 +1015,30 @@ doi={10.1109/TIT.2005.844069},
 ISSN={0018-9448},
 }
 
+@BOOK{phaseunwrap2d_book_Ghiglia,
+  title = {Two-Dimensional Phase Unwrapping: Theory, Algorithms, and Software},
+  year = 1998,
+  month = {April},
+  author = {D. C. Ghiglia, M. D. Pritt},
+  publisher = {Wiley},
+  pages = 512,
+  isbn = {978-0-471-24935-1}
+}
+
+@ARTICLE{Nico_baeysian_phase_unwrapping_2000, 
+author={G. Nico and G. Palubinskas and M. Datcu}, 
+journal=ieeetsp, 
+title={Bayesian approaches to phase unwrapping: theoretical study}, 
+year=2000, 
+month={sep}, 
+volume=48, 
+number=9, 
+pages={2545-2556}, 
+keywords={Bayesian approach;absolute phase;aliasing;estimation theory;ill-posed problem;noise;phase unwrapping;prior assumptions;regularization constraints;sampling process;two-dimensional phase signals;Bayes methods;noise;signal reconstruction;signal sampling;}, 
+doi={10.1109/78.863057}, 
+ISSN={1053-587X},}
+
+
 @ARTICLE{Ghez_stability_slotted_aloha_1988, 
 author={S. Ghez and S. Verdu and S.C. Schwartz}, 
 journal={IEEE Transactions on Automatic Control}, 
@@ -999,7 +1197,7 @@ Department of Mathematics},
 
 @phdthesis{Clarkson_thesis, 
 author = {I. V. L. Clarkson}, 
-title = {Approximation of linear forms by lattice with applications to signal processing},
+title = {Approximation of linear forms by lattice points with applications to signal processing},
 year = 1997,
 month = {Jan.},
 school = {Australian National University, Canberra},
@@ -1151,7 +1349,7 @@ ISSN={0018-9448}, }
 @article{ConwaySloane1992_voronoi_lattice_3d_obtuse_superbases,
      jstor_articletype = {primary_article},
      title = {Low-Dimensional Lattices. {VI}. {Voronoi} Reduction of Three-Dimensional Lattices},
-     author = {Conway, J. H. and Sloane, N. J. A.},
+     author = {J. H. Conway and N. J. A. Sloane},
      journal = {Proceedings: Mathematical and Physical Sciences},
      jstor_issuetitle = {},
      volume = {436},
@@ -1169,7 +1367,7 @@ ISSN={0018-9448}, }
         
 @ARTICLE{Conway1983VoronoiCodes,
 title={A fast encoding method for lattice codes and quantizers},
-author={ Conway, J. and Sloane, N.},
+author={J. H. Conway and N. J. A. Sloane},
 journal= ieeetit,
 year={1983},
 month={Nov},
@@ -1195,6 +1393,17 @@ year=2005,
 month=july,
 school={Delft University of Technology}
 }
+
+@book{surveys_combin_zonotopes_1997,
+title={Surveys in combinatorics},
+year=1997,
+editor={R. Bailey},
+publisher=cup,
+series = {London Mathematical Society Lecture Note Series},
+number=241  
+}
+
+
 
 @inproceedings{Conway1997_sensual_quadratic_form,
 	author = {J. H. Conway},
@@ -1519,8 +1728,20 @@ volume = {39},
   address = {New York},
 }
 
+
+@ARTICLE{Ellis_music_tracking_2007,
+  author = {D. P. W. Ellis},
+  title = {Beat tracking with dynamic programming},
+  journal = {J. New Music Res.},
+  year = 2007,
+  volume = 36,
+  pages = {51-60},
+  number = 1,
+  month = {Mar.},
+  }
+
 @ARTICLE{Erex2004_lattice_decoding,
-title={Achieving {$1/2 \log(1+{\text{SNR}})$} on the {AWGN} channel with lattice encoding and decoding},
+title={Achieving {$1/2 \log(1+SNR)$} on the {AWGN} channel with lattice encoding and decoding},
 author={U. Erez and R. Zamir},
 journal=ieeetit,
 year=2004,
@@ -1666,6 +1887,28 @@ file = {elkies_lattices_linear_codes.pdf}
   timestamp = {2008.02.17}
 }
 
+@ARTICLE{Zamir_nested_lattice_2002,
+  author = {R. Zamir and S. Shamai and U. Erez},
+  title = {Nested linear/lattice codes for structured multiterminal binning},
+  journal = ieeetit,
+  year = 2002,
+  volume = 48,
+  pages = {1250-1275},
+  number = 6,
+  month = {Jun.},
+}
+
+@ARTICLE{Zamir_quant_noise_lattice_1996,
+  author = {R. Zamir and M. Feder},
+  title = {On lattice quantization noise},
+  journal = ieeetit,
+  year = 1996,
+  volume = 42,
+  pages = {1152–1159},
+  number = 4,
+  month = {Jul.},
+}
+
 @article{Mathews_normal_sample_range_1993,
      jstor_articletype = {research-article},
      title = {Asymptotic Distribution of the Normal Sample Range},
@@ -1701,6 +1944,14 @@ file = {elkies_lattices_linear_codes.pdf}
      abstract = {Spherical analogues of the linear and spatial medians are proposed for unimodal, bipolar axial and girdle distributions on the sphere. For unimodal data, the statistical properties of the sample spherical median direction are studied, including comparison with the sample mean direction in the case of Fisher's distribution. Spherical analogues of the one- and k-sample sign test are suggested. The paper parallels the discussion by Brown (1983) for the spatial median.},
      year = 1985,
     }
+
+@book{Mordell_Diophantine_equations_1969,
+author={L. J. Mordell},
+year={1969}, 
+title={Diophantine equations},
+publisher={Academic Press},
+isbn={0-12-506250-8}
+}
 
 @article{Fisher_spherical_medians_axis_1993,
      title = {Spherical Median Axes},
@@ -2496,6 +2747,15 @@ doi={10.1109/TCOMM.2005.860092},
 ISSN={0090-6778} 
 }
 
+@ARTICLE{Windpassinger_mimo_itw_2003,
+  author = {C. Windpassinger and R. F. H. Fischer},
+  title = {Low-complexity near-maximum-likelihood detection and precoding for MIMO systems using lattice reduction},
+  journal = {Proc. Inform. Theory Workshop},
+  year = 2003,
+  pages = {345-348},
+  month={Mar},
+}
+
 @article{Lin_FFT_OFDM_chip_withbitrev_2007,
 author={Y. Lin and C. Lee},
 title={Design of an {FFT/IFFT} Processor for {MIMO OFDM} Systems},
@@ -2877,9 +3137,9 @@ month={Mar.}
 @unpublished{McKilliam_short_vectors_first_type_isit_2012,
 author={R. G. McKilliam and A. Grant},
 title={Finding short vectors in a lattice of {Voronoi's} first kind},
-note={submitted to the International Symposium on Information Theory (ISIT)},
+note={accepted to the International Symposium on Information Theory (ISIT)},
 year=2012,
-month={Jan.}
+month={Apr.}
 }
 
 @unpublished{Kodithuwakku_projection_PIC_ICC_2012,
@@ -2890,18 +3150,17 @@ year=2012,
 month={Jan.}
 }
 
-@article{McKilliam_error_prob_An2012,
+@unpublished{McKilliam_error_prob_An2012,
   author    = {R. G. McKilliam and
                R. Subramanian and
                E. Viterbo and
                I. V. L. Clarkson},
   title     = {On the error performance of the ${A}_{n}$ lattices},
-  journal   = {CoRR},
-  volume    = {abs/1111.6334},
-  year      = 2011,
-  ee        = {http://arxiv.org/abs/1111.6334},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
+  note={accepted to IEEE Trans. Inf. Th.},
+month = {Apr.},
+year      = 2012,
+  url        = {http://arxiv.org/abs/1111.6334},
+  }
 
 @inproceedings{Quinn_snpe_dasp_2011,
 author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
@@ -3190,6 +3449,15 @@ doi={10.1109/TSP.2009.2025801},
 ISSN={1053-587X},
 }
 
+@article{Seethaler_vector_pert_mimo_int_rels_2006,
+author={D. Seethaler and G. Matz}, 
+title={Efficient vector perturbation in multi-antenna multi-user systems based on approximate integer relations}, 
+journal={Proc. Eur. Signal Process. Conf.}, 
+month={Sep.},
+year={2006}
+}
+
+
 @ARTICLE{Mow_hexagonal_lattice_nearest_point,
 title={Fast decoding of the hexagonal lattice with applications to power efficient multi-level modulation systems},
 author={W. H. Mow},
@@ -3330,6 +3598,18 @@ month = {July},
 school = {Virginia Polytechnic Institute},
 } 
 
+@ARTICLE{Nielsen_onmassey_1973, 
+author={P. Nielsen}, 
+journal=ieeetcom, 
+title={Some Optimum and Suboptimum Frame Synchronizers for Binary Data in {Gaussian} Noise}, 
+year=1973, 
+month={jun}, 
+volume=21, 
+number=6, 
+pages={770-772}, 
+keywords={ Decision procedures; Frame synchronization;}, 
+doi={10.1109/TCOM.1973.1091725}, 
+ISSN={0090-6778},}
 
 @ARTICLE{Panzeri2008,
   author = {S. Panzeri and C. Magri and N. K. Logothetis},
@@ -3927,6 +4207,14 @@ edition = {4th},
   year = 	 1975
 }
 
+@BOOK{Siegel_geom_numbers_1989,
+author={C. L. Siegel}, 
+title={Lectures on the Geometry of Numbers},
+address={Berlin},
+publisher={Springer-Verlag}, 
+year=1989
+}
+
 @ARTICLE{Secord1989,
   author = {N. Secord and R. de Buda},
   title = {Demodulation of a {Gosset} Lattice Code Having a Spectral Null at {DC}},
@@ -3976,6 +4264,25 @@ year = 1980,
   pages = {379-423}
 }
 
+@ARTICLE{Shannon1949_comm_pres_noise,
+  author = {C. E. Shannon},
+  title = {Communication in the presence of noise},
+  journal = {Proc. IRE},
+  year = 1949,
+  volume = 37,
+  pages = {10-21}
+}
+
+@article{Linder_debuda_correct_1993,
+title = {Corrected proof of {de Buda’s} theorem},
+journal = ieeetit,
+volume = 39,
+number = 5,
+pages = {1735-1737},
+year = 1993,
+author = {T. Linder and C. Schlegel and K. Zegera}
+}
+
 @article{Purkayastha_more_on_circ_median_1995,
 title = "An almost sure representation of sample circular median",
 journal = "Journal of Statistical Planning and Inference",
@@ -4016,7 +4323,7 @@ year=1975,
 }
 
 @ARTICLE{Sikiric_vor_reduction_covering_2008,
-author = {M. D. Sikiri\`c and A. Sch\"urmann and F. Vallentin},
+author = {M. Dutour Sikiri\'c and A. Sch\"urmann and F. Vallentin},
  title = {A generalistation of {Voronoi's} reduction theory and its application},
  journal = {Duke Mathematical Journal},
 volume = {142},
@@ -4027,7 +4334,7 @@ pages = {127-164}
 
 
 @ARTICLE{Sikiric_complex_algs_vor_cells_2009,
-author = {M. D. Sikiri\`c and A. Sch\"urmann and F. Vallentin},
+author = {M. Dutour Sikiri\'c and A. Sch\"urmann and F. Vallentin},
  title = {Complexity and algorithms for computing {Voronoi} cells of lattices},
  journal = {Mathematics of Computation},
 month = {Feb.},
@@ -4262,6 +4569,14 @@ ISSN={1089-7798},}
   ISBN = 9780521784504
 }
 
+@BOOK{vanTrees_det_est_mod_part1_1968,
+  title = {Detection, Estimation, and Modulation Theory: Part 1},
+  publisher = {Wiley},
+address={New York},
+  year = 1968,
+  author = {H. L. van Trees},
+}
+
 @article{Voronoi1908_main_paper,
 author = {G.F. Voronoi},
 year = 1908,
@@ -4272,7 +4587,7 @@ pages = {97-178}
 }
 
 @phdthesis{Valentin2003_coverings_tilings_low_dimension, 
-author = {F. Valentin}, 
+author = {F. Vallentin}, 
 title = {Sphere coverings, lattices, and tilings (in low dimensions)},
 year = 2003,
 month = {November},
@@ -4421,6 +4736,15 @@ number=2,
   pages = {589-593},
 }
 
+@ARTICLE{Wubben_near_ML_lat_red_MIMO_2004,
+  author = {D. Wübben and R. Böhnke and V. Kühn and K.-D. Kammeyer},
+  title = {Near-maximum-likelihood detection of MIMO systems using MMSE-based lattice-reduction},
+  journal = procicomms,
+  year = 2004,
+  pages = {798-802},
+  number = 4,
+  month = {Jun.},
+}
 
 @ARTICLE{Wu1991,
   author = {X. Wu},
@@ -4433,6 +4757,134 @@ number=2,
   month = {July},
   owner = {Robby},
   timestamp = {2007.06.21}
+}
+
+
+@ARTICLE{Balik_lattice_network_coding_2007,
+  author = {I. J. Baik and S. Y. Chung},
+  title = {Network coding for two-way relay channels using lattices},
+  journal = procicomms,
+  year = 2008,
+  month = {May},
+pages={3898-3902}
+}
+
+@ARTICLE{Clarkson_joint_coding_mod_ofdm_2002,
+  author = {I. V. L. Clarkson and I. B. Collings},
+  title = {A new joint coding and modulation scheme for channels with clipping},
+  journal = {Digit. Signal Process.},
+  year = 2002,
+volume=12,
+number={2/3},
+pages={223–241}
+}
+
+@ARTICLE{Clarkson_low_par_ofdm_2004,
+  author = {I. V. L. Clarkson and I. B. Collings},
+  title = {A low-complexity lattice-based low-{PAR} transmission scheme for {DSL} channels},
+  journal = ieeetcom,
+  year = 2004,
+volume=52,
+number=5,
+pages={755-764},
+month={May}
+}
+
+@ARTICLE{Cadambe_IA_2008, 
+author={V.R.  Cadambe and S.A. Jafar}, 
+journal=ieeetit, 
+title={Interference Alignment and Degrees of Freedom of the {K}-User Interference Channel}, 
+year=2008, 
+month={Aug.}, 
+volume=54, 
+number=8, 
+pages={3425-3441}, 
+keywords={channel coefficients;degrees of freedom;interference alignment;signal to noise ratio;time-varying channel;user interference channel;wireless interference channel;cochannel interference;time-varying channels;wireless channels;}, 
+doi={10.1109/TIT.2008.926344}, 
+ISSN={0018-9448},}
+
+@ARTICLE{Choi_IA_lattices_2011, 
+author={J. Choi}, 
+journal=ieeecommsl, 
+title={Interference Alignment over Lattices for {MIMO} Interference Channels}, 
+year=2011, 
+month={Apr.}, 
+volume=15, 
+number=4, 
+pages={374-376}, 
+keywords={3-user interference channel;MIMO interference channel;complexity detector;error probability;interference alignment;joint detection;lattice;multiinput multioutput interference channel;precoder design;receiver;MIMO communication;communication complexity;error statistics;interference (signal);precoding;radio receivers;wireless channels;}, 
+doi={10.1109/LCOMM.2011.012511.101576}, 
+ISSN={1089-7798},}
+
+@ARTICLE{Tribolet_phase_unwrap_1977, 
+author={Tribolet, J.}, 
+journal={Acoustics, Speech and Signal Processing, IEEE Transactions on}, 
+title={A new phase unwrapping algorithm}, 
+year=1977, 
+month={Apr.}, 
+volume=25, 
+number=2, 
+pages={170-177}, 
+doi={10.1109/TASSP.1977.1162923}, 
+ISSN={0096-3518},}
+
+@ARTICLE{Barbero_Clarkson_hardware_lat_red_2009, 
+author={L. G. Barbero and D. L. Milliner and J. R. Berry and C. Cowan}, 
+journal=procicomms, 
+title={Rapid prototyping of {Clarkson’s} lattice reduction in {MIMO} detection}, 
+year=2009, 
+month={Jun.}, 
+}
+
+@ARTICLE{Sridharan_layered_lattice_interference_2008,
+  author = {S. Sridharan and A. Jafarian and S. Vishwanath and S. A. Jafar and S. Shamai},
+  title = {A layered lattice coding scheme for a class of three user Gaussian interference channels},
+  journal = {Proc. Allerton Conf. Commun. Control Comput.},
+  year = 2008,
+  month = {Sep},
+pages={531-538}
+}
+
+@ARTICLE{Nazer_gaussian_mac_network_lattice_2007,
+  author = {B. Nazer and M. Gastpar},
+  title = {Lattice coding increases multicast rates for Gaussian multiple-access networks},
+  journal = {Proc. Allerton Conf. Commun. Control Comput.},
+  year = 2007,
+  month = {Sep.}
+}
+
+
+@ARTICLE{Erez_cap_lat_dirty_paper2005,
+  author = {U. Erez and S. Shamai and R. Zamir},
+  title = {Capacity and lattice strategies for canceling known interference},
+  journal = ieeetit,
+  year = 2005,
+  volume = 51,
+  pages = {143-152},
+  number = 11,
+  month = {Nov.}
+}
+
+@ARTICLE{Philosof_cap_dirty_paper_MAC_2007,
+  author = {T. Philosof and A. Khisti and U. Erez and R. Zamir},
+  title = {Lattice strategies for the dirty multiple access channel},
+  journal = {Proc. Internat. Sympos. Inform. Theory},
+  year = 2007,
+  volume = 51,
+  pages = {386-390},
+  number = 11,
+  month = {Jul.}
+}
+
+@ARTICLE{Costa_dirty_paper_1983,
+  author = {M. H. M. Costa},
+  title = {Writing on dirty paper},
+  journal = ieeetit,
+  year = 1983,
+  volume = 29,
+  pages = {439-441},
+  number = 3,
+  month = {May},
 }
 
 @article{Wolfe1975_unimodal_spherical,
@@ -4483,7 +4935,14 @@ keywords={ 0.13 micron; 0.35 micron; 100 MHz; 16-quadra-ture amplitude modulatio
 doi={10.1109/JSAC.2005.862402},
 ISSN={0733-8716},}
 
-
+@ARTICLE{Zamir_lattice_everywhere_2009,
+author={R. Zamir},
+journal={Proc. Inform. Theory Appl. Workshop},
+title={Lattices are everywhere},
+year={2009},
+month={Mar.},
+pages={392-421},
+}
 
 @BOOK{Zygmund2002,
   title = {Trigonometric Series},
