--- a/robby.bib
+++ b/robby.bib
@@ -21,9 +21,9 @@
 @unpublished{McKilliam_short_vectors_first_type_isit_2012,
   author = {R. G. McKilliam and A. Grant},
   title = {Finding short vectors in a lattice of {Voronoi's} first kind},
-  note = {submitted to the International Symposium on Information Theory (ISIT)},
+  note = {accepted to the International Symposium on Information Theory (ISIT)},
   year = 2012,
-  month = {Jan.}
+  month = {Apr.}
 }
 
 @unpublished{Kodithuwakku_projection_PIC_ICC_2012,
@@ -34,17 +34,16 @@
   month = {Jan.}
 }
 
-@article{McKilliam_error_prob_An2012,
+@unpublished{McKilliam_error_prob_An2012,
   author = {R. G. McKilliam and
                R. Subramanian and
                E. Viterbo and
                I. V. L. Clarkson},
   title = {On the error performance of the ${A}_{n}$ lattices},
-  journal = {CoRR},
-  volume = {abs/1111.6334},
-  year = 2011,
-  ee = {http://arxiv.org/abs/1111.6334},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
+  note = {accepted to IEEE Trans. Inf. Th.},
+  month = {Apr.},
+  year = 2012,
+  url = {http://arxiv.org/abs/1111.6334}
 }
 
 @inproceedings{Quinn_snpe_dasp_2011,
