--- a/bib.bib
+++ b/bib.bib
@@ -181,10 +181,26 @@ ISSN={0018-9448},
      CODEN = {AMNOAN},
    MRCLASS = {30F35},
   MRNUMBER = {MR2467425 (2009j:30100)},
-MRREVIEWER = {Jack O. Button},
-file = {arnold_moebius.pdf}
+MRREVIEWER = {Jack O. Button}
 }
 
+@article{Vapnick_on_unif_conv_1971,
+    AUTHOR = {V. N. Vapnik and A. Y. Chervonenkis},
+     TITLE = {On the Uniform Convergence of Relative Frequencies of Events to their Probabilities},
+   JOURNAL = {Theory of Probability and its Applications},
+    VOLUME = {XVI},
+      YEAR = {1971},
+    NUMBER = {2},
+     PAGES = {264-280}
+}
+
+
+@book{Chazelle_discrepency_method_2000,
+title={The Discrepency Method: Randomness and Complexity},
+author={B. Chazelle},
+publisher=cup,
+year={2000}
+}
 
 @ARTICLE{Agrell2002,
   author = {E. Agrell and T. Eriksson and A. Vardy and K. Zeger},
@@ -231,6 +247,18 @@ doi={10.1109/TAES.1986.310805},
 ISSN={0018-9251},
 file = {ABATZOGLOU_ML_chirp.pdf}
 }
+
+@ARTICLE{Dorwart_seq_ideal_pte_1947, 
+author={H. L. Dorwart}, 
+journal={Bull. Amer. Math. Soc.}, 
+title={Sequences of ideal solutions in the {Tarry-Escott} problem}, 
+year=1947, 
+month={Apr.}, 
+volume=53, 
+number=4, 
+pages={381-391}
+}
+
 
 @book{amemiya1985advanced,
   title={Advanced econometrics},
@@ -446,6 +474,47 @@ year=1982,
 pages={107–109}
 }
 
+@article{vonMises_diff_stats_1947,
+title={ON THE ASYMPTOTIC DISTRIBUTION OF DIFFERENTIABLE
+STATISTICAL FUNCTIONS},
+journal={Annals of Mathematical Statistics},
+year=1947,
+volume=18,
+number=3,
+month={Sep.},
+pages={309-348},
+author={R. von Mises},
+}
+
+@inproceedings{Torezzan:2009:SCT:1701116.1701236,
+ author = {Torezzan, Cristiano and Costa, Sueli I. R. and Vaishampayan, Vinay A.},
+ title = {Spherical codes on torus layers},
+ booktitle = {Proceedings of the 2009 IEEE international conference on Symposium on Information Theory - Volume 3},
+ series = {ISIT'09},
+ year = 2009,
+ location = {Coex, Seoul, Korea},
+ pages = {2033-2037}
+} 
+
+@article{Pollard_new_ways_clts_1986,
+title={New Ways to Prove Central Limit Theorems},
+journal={Econometric Theory},
+year=1985,
+volume=1,
+number=3,
+pages={295-313},
+month={Dec.},
+author={D. Pollard},
+}
+
+@book{Pollard_conv_stat_proc_1984,
+title={Convergence of Stochastic Processes},
+author={D. Pollard}, 
+publisher={Springer-Verlag},
+address={New York}, 
+year=1984
+}
+
 @article{Sloane_proj_cubic_lattice_2011,
    author = {N. J. A. Sloane and V. A. Vaishampayan and S. I. R. Costa},
    affiliation = {AT&T Shannon Labs, 180 Park Avenue, Florham Park, NJ 07932-0971, USA},
@@ -478,6 +547,16 @@ pages={107–109}
   year = {1956},
   volume = {42},
   pages = {412-413}
+}
+
+@ARTICLE{Ossiander_clt_bracketing_1984,
+  author = {M. Ossiander},
+  title = {A central limit theorem under metric entropy with $L_2$ bracketing},
+  journal = {Annals of Probability},
+  year = 1984,
+  volume = 15,
+number=3,
+  pages={897-891}
 }
 
 @INPROCEEDINGS{Ming_burst_mode_hamming_GPON_2008, 
@@ -699,6 +778,13 @@ pages={401-412}
   year=1979
 }
 
+@book{Pollard_users_guide_prob_2002,
+  author = {D. Pollard},
+  title = {A users guide to measure theoretic probability},
+  publisher=cup, 
+  year=2002
+}
+
 @article{Craig_ext_form_cyclotomy_1978,
 author={M. Craig},
 title={Extreme forms and cyclotomy},
@@ -834,6 +920,20 @@ keywords={digital algorithm;digital data transmission;digital filter;free-runnin
 doi={10.1109/26.1476}, 
 ISSN={0090-6778},}
 
+
+@ARTICLE{Forney_mod_coding_lin_gauss_1998, 
+author={Forney, G.D., Jr. and Ungerboeck, G.}, 
+journal=ieeetit, 
+title={Modulation and coding for linear Gaussian channels}, 
+year=1998, 
+month={Oct.}, 
+volume=44, 
+number=6, 
+pages={2384-2415}, 
+keywords={SNR;binary coding;channel capacity;combined coding/precoding;high-signal-to-noise ratio;intersymbol-interference channels;linear Gaussian channels;low-signal-to-noise ratio;multilevel coding;nonbinary coding;orthogonal minimum-bandwidth modulation;review;turbo coding;turbo decoding;Gaussian channels;channel capacity;decoding;encoding;modulation;reviews;}, 
+doi={10.1109/18.720542}, 
+ISSN={0018-9448},}
+
 @ARTICLE{Letzepis_scintilation_FSO_2009,
 author={N. Letzepis and A. {Guillen i Fabregas}},
 journal=ieeetcom, 
@@ -874,6 +974,13 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@book{Borwein_compexcursions_2002,
+  author = {P. Borwein},
+  title = {Computational Excursions in Analysis and Number Theory},
+  year = 2002,
+publisher = {Springer-Verlag},
+address={New York}
+  }
 
 @ARTICLE{Borwein_Prouhet_Tarry_Escott_revisited_1994,
   author = {P. Borwein and C. Ingalls},
@@ -883,6 +990,16 @@ archivePrefix = "arXiv",
   volume = {40},
   pages = {3-27},
   number = {4}
+}
+
+@ARTICLE{Pollard_asymp_empi_proc_1989,
+  author = {D. Pollard},
+  title = {Asymptotics by empirical processes},
+  journal = {Statistical Science},
+  year = 1989,
+  volume = 4,
+  pages = {341-325},
+  number = 4
 }
 
 
@@ -1063,6 +1180,14 @@ ISSN={0018-9286},}
   isbn = {0821803883, 9780821803882}
 }
 
+@BOOK{Dudley_unif_central_lim_th_1999,
+  title = {Uniform central limit theorems},
+  year = 1999,
+  author = {R. M. Dudley},
+  publisher = cup,
+  isbn = 0521461022
+}
+
 @article{Belov1965_emptyness_fund_ppd,
 journal = {Journal of Structural Chemistry},
 year = {1965},
@@ -1216,6 +1341,7 @@ file = {vaughan_clarkson_thesis.pdf}
   pages = {104-120}
 }
 
+
 @ARTICLE{Clarkson2007,
   author = {I. V. L. Clarkson},
   title = {Approximate Maximum-Likelihood Period Estimation from Sparse, Noisy
@@ -1292,6 +1418,16 @@ pages = {26-34}
   year = 1973,
   author = {H. S. M. Coxeter},
   address = {New York}
+}
+
+@BOOK{Matousek_lect_disc_geom_2002,
+  title = {Lectures on Discrete Geometry},
+  series = {Graduate Texts in Mathematics},
+volume=212,
+publisher = {Springer},
+  year = 2002,
+  author = {J. Matousek},
+number={XVI}
 }
 
 @BOOK{SPLAG,
@@ -1531,6 +1667,17 @@ volume=304,
 number=5669,
 pages={405-408} 
 }
+
+@article{Gine_Zinn_symmetrisation_1984,
+author={E. Gin\'{e} and J. Zinn},
+year=1984,
+title={Some Limit Theorems for Empirical Processes},
+journal={Annals of Probability},
+volume=12,
+number=4,
+pages={929-989} 
+}
+
 
 @article{Lediseasecircstat2003,
 author={C. T. Le and P. Liu and B. R. Lindgren and K. A. Daly and G.S. Giebink},
@@ -2492,6 +2639,16 @@ ISSN={1053-587X}
   edition = {6th}
 }
 
+@ARTICLE{Wright_pte_ideals_always_1935,
+  author = {E. M. Wright},
+  title = {On Tarry’s problem (I)},
+  journal = {Quart. J. Math.},
+  series={Oxford Ser.},
+year = 1935,
+  volume = 6,
+  pages = {261–267}
+}
+
 @ARTICLE{Hartley1928,
   author = {R.V.L. Hartley},
   title = {Transmission of Information},
@@ -3126,7 +3283,6 @@ issue={1},
 pages={525-547}
 }
 
-
 @article{McKilliam_mean_dir_est_sq_arc_length2010,
 author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson},
 title={Direction estimation by minimum squared arc length},
@@ -3137,13 +3293,22 @@ pages={2115-2124},
 year=2012,
 month={May},
 doi={10.1109/TSP.2012.2186444}
+}
 
-@unpublished{McKilliam_short_vectors_first_type_isit_2012,
+@unpublished{Quinn_sparse_noisy_SSP_2012,
+author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+title={Estimating Period From Sparse, Noisy Timing Data},
+note={accepted for {IEEE Statistical Signal Processing Workshop}},
+year=2012,
+month={Aug},
+}
+
+@article{McKilliam_short_vectors_first_type_isit_2012,
 author={R. G. McKilliam and A. Grant},
 title={Finding short vectors in a lattice of {Voronoi's} first kind},
-note={accepted to the International Symposium on Information Theory (ISIT)},
+journal={International Symposium on Information Theory (ISIT)},
 year=2012,
-month={Apr.}
+month={July}
 }
 
 @unpublished{Kodithuwakku_projection_PIC_ICC_2012,
@@ -3163,6 +3328,7 @@ month={Jan.}
   note={accepted to IEEE Trans. Inf. Th.},
 month = {Apr.},
 year      = 2012,
+doi={10.1109/TIT.2012.2199462},
   url        = {http://arxiv.org/abs/1111.6334},
   }
 
@@ -3810,6 +3976,13 @@ ISSN={1051-8215}
    year = 2010
 }
 
+@book{Cassels_geom_numbers_1997,
+title={An Introduction to the Geometry of Numbers},
+author={J. W. S. Cassels},
+publisher={Springer},
+year=1997,
+}
+
 @article{Mann_circstat_med_cement_2003,
 author={K. A. Mann and S. Gupta and A. Race and M. A. Miller and R. J. Cleary},
 title={Application of circular statistics in the study of crack distribution around cemented femoral components},
@@ -4139,7 +4312,7 @@ file = {dan_ryan_thesis.pdf}
 @ARTICLE{Viterbo_diamond_cutting_1996, 
 author={Viterbo, E. and Biglieri, E.}, 
 journal=ieeetit, 
-title={Computing the Voronoi cell of a lattice: the diamond-cutting algorithm}, 
+title={Computing the {Voronoi} cell of a lattice: the diamond-cutting algorithm}, 
 year=1996, 
 month={Jan.}, 
 volume=42, 
@@ -4671,6 +4844,38 @@ school = {Zentrum Mathematik, Technische Universit\"at M\"unchen}
    year = 1986
 }
 
+@article{Cowley_ref_sym_carr_1998,
+ author = {Cowley, W. G.},
+ title = {Reference symbols can improve performance over differential coding in {ML} and near-{ML} detectors},
+ journal = {Signal Process.},
+ volume = 71,
+ number = 1,
+ month = {Nov.},
+ year = 1998,
+ issn = {0165-1684},
+ pages = {95-99},
+ numpages = 5,
+ url = {http://dx.doi.org/10.1016/S0165-1684(98)00172-8},
+ doi = {10.1016/S0165-1684(98)00172-8},
+ acmid = 303427,
+ publisher = {Elsevier North-Holland, Inc.},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ keywords = {multiple symbol detection, phase estimation, reference symbols},
+} 
+
+@ARTICLE{ViterbiViterbi_phase_est_1983, 
+author={ Viterbi, A.}, 
+journal=ieeetit, 
+title={Nonlinear estimation of PSK-modulated carrier phase with application to burst digital transmission}, 
+year=1983, 
+month={Jul.}, 
+volume=29, 
+number=4, 
+pages={ 543 - 551}, 
+keywords={ Demand-assigned multiaccess; Nonlinear estimation; Phase estimation; Phase-shift keying; Satellite communication, multiaccess; TDMA (time-division multiple-access); Time-division multiple-access;}, 
+doi={10.1109/TIT.1983.1056713}, 
+ISSN={0018-9448},}
+
 @ARTICLE{Weber1978,
   author = {W. J. Weber},
   title = {Differential encoding for multiple amplitude and phase shift keying
@@ -4894,7 +5099,7 @@ pages={531-538}
 @book{Shorak_emp_proc_stat_2009,
 author={G. R. Shorack and J. A. Wellner},
 year={2009},
-title={Empirical Processes With Applications to Statistics},
+title={Empirical Processes with Applications to Statistics},
 series={Classics in Applied Mathematics},
 month={Sep.},
 isbn={9780898716849},
