--- a/robby.bib
+++ b/robby.bib
@@ -22,12 +22,20 @@
   doi = {10.1109/TSP.2012.2186444}
 }
 
-@unpublished{McKilliam_short_vectors_first_type_isit_2012,
+@unpublished{Quinn_sparse_noisy_SSP_2012,
+  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+  title = {Estimating Period From Sparse, Noisy Timing Data},
+  note = {accepted for {IEEE Statistical Signal Processing Workshop}},
+  year = 2012,
+  month = {Aug}
+}
+
+@article{McKilliam_short_vectors_first_type_isit_2012,
   author = {R. G. McKilliam and A. Grant},
   title = {Finding short vectors in a lattice of {Voronoi's} first kind},
-  note = {accepted to the International Symposium on Information Theory (ISIT)},
+  journal = {International Symposium on Information Theory (ISIT)},
   year = 2012,
-  month = {Apr.}
+  month = {July}
 }
 
 @unpublished{Kodithuwakku_projection_PIC_ICC_2012,
@@ -47,6 +55,7 @@
   note = {accepted to IEEE Trans. Inf. Th.},
   month = {Apr.},
   year = 2012,
+  doi = {10.1109/TIT.2012.2199462},
   url = {http://arxiv.org/abs/1111.6334}
 }
 
